<resources>
    <string name="appname">长沙水土保持</string>

    <string name="loading">正在加载……</string>
    <string name="updata">正在上传……</string>
    <string name="map_browse">在线地图</string>
    <string name="measure">措施详情</string>
    <string name="proj_detail">项目详情</string>
    <string name="proj_search">项目检索</string>
    <string name="proj_plan">项目预案</string>
    <string name="proj_statistics">项目统计</string>
    <string name="proj_opinion">整改意见</string>

    <!--serverhost-->
    <!--公司云-->
    <!--帐号：superadmin 密码：123456-->
    <!--<string name="serverhost">http://101.201.54.143:8020/</string>-->
    <!--客户云-->
    <!--帐号：superadmin 密码：cs_swjsadmin-->
    <string name="serverhost">http://218.77.44.9:8020/</string>

    <!--影像图地址-->
    <string name="img_201606">http://218.77.44.9:6080/arcgis/rest/services/BASEDATA/Image_201606/MapServer</string>
    <string name="img_201612">http://218.77.44.9:6080/arcgis/rest/services/BASEDATA/Image_201612/MapServer</string>
    <string name="img_201701">http://218.77.44.9:6080/arcgis/rest/services/BASEDATA/Image_201701/MapServer</string>
    <!--测试-->
    <string name="test">测试</string>
    <string name="test_more">测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
        测试测试测试测试测试测试测试测试测试测试</string>

    <!--登录-->
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="rememberuser">记住用户</string>
    <string name="app_version">版本号: </string>
    <string name="tech_support">技术支持：北京航天泰坦科技股份有限公司</string>
    <string name="copyright">Copyright©2016–2026长沙市水土保持防治监督站 All Right Reserved.</string>
    <string name="login">登录</string>
    <string name="logging">正在登录</string>
    <!--数据统计-->
    <string name="swyx">3万㎡以下</string>
    <string name="szbw">3–8万㎡</string>
    <string name="bwys">8万㎡以上</string>
    <string name="nodata">没有数据</string>
    <!--项目检索-->
    <string name="search_set">检索设置</string>
    <string name="project_type">项目类型:</string>
    <string name="approval_status">审批状态:</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="time_range">时间范围</string>
    <string name="sure">确定</string>
    <string name="proj_name">项目名称：</string>
    <string name="proj_time">申请时间：</string>
    <string name="proj_type">项目类型：</string>
    <string name="proj_statu">审批状态：</string>
    <string name="search">搜索</string>
    <string name="location_search">根据当前位置搜索</string>
    <!--项目详情-->
    <string name="base_info">基本信息</string>
    <string name="basic_facts">项目概况</string>
    <string name="proj_measure">水保措施</string>
    <string name="proj_record">项目记录</string>
    <string name="map_mode">地图模式</string>
    <string name="change_layer">图层</string>
    <string name="location">定位</string>
    <string name="proj_location">项目</string>
    <string name="no_expert_opinion">暂无执法信息</string>
    <string name="opinion_add">新增</string>
    <string name="plan">预案</string>
    <string name="sign_out">退出登录</string>
    <string name="system_name">水土保持空天地一体化监督系统</string>
    <string name="no_data">暂无数据</string>
    <string name="project_navigation">导航</string>
    <string name="cross">指针</string>
    <string name="confirmselect">确认选点</string>
    <string name="concelselect">撤销</string>
    <string name="coll_delete">删除</string>
    <string name="collect_end">结束采集</string>
    <string name="collect_start">开始采集</string>
    <string name="collect_save">保存</string>
    <string name="collect_cancel">取消</string>
    <string name="proj_collection">采集</string>
    <string name="cpq_measure">场平期措施/施工准备期措施</string>
    <string name="jsq_measure">建设期措施</string>
</resources>
