<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="com.titan.cssl.projdetails.ProjDetailViewModel"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/base_info"
                style="@style/tab_tv"
                android:onClick="@{()->viewmodel.pagerSelect(0)}"
                android:text="@string/base_info"
                android:visibility="@{viewmodel.hasBaseinfo?View.VISIBLE: View.GONE}"/>

            <TextView
                android:id="@+id/survey"
                style="@style/tab_tv"
                android:onClick="@{()->viewmodel.pagerSelect(1)}"
                android:text="@string/basic_facts"/>

            <TextView
                android:id="@+id/proj_measure"
                style="@style/tab_tv"
                android:onClick="@{()->viewmodel.pagerSelect(2)}"
                android:text="@string/proj_measure"/>

            <TextView
                android:id="@+id/proj_record"
                style="@style/tab_tv"
                android:onClick="@{()->viewmodel.pagerSelect(3)}"
                android:text="@string/proj_record"/>
        </LinearLayout>

        <View
            android:id="@+id/slider"
            android:layout_width="130dp"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</layout>
