<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.titan.ynsjy.login.LoginActivity"
    >

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="com.titan.cssl.login.LoginViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <!--<ImageView-->
            <!--android:id="@+id/iv_logo"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_margin="10dp"-->
            <!--android:background="@drawable/login_logo"/>-->

        </LinearLayout>

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

        <!--<ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">-->

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_loginform"
            android:orientation="vertical"
            android:divider="@drawable/divider_horizontal"
            android:showDividers="middle">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@null"
                android:drawablePadding="10dp"
                android:drawableStart="@{@drawable/ic_user_name}"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:paddingEnd="5dp"
                android:paddingStart="8dp"
                android:text="@={viewmodel.username}"/>


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@null"
                android:drawablePadding="10dp"
                android:drawableStart="@{@drawable/ic_password}"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:text="@={viewmodel.password}"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:checked="@={viewmodel.isremember}"
            android:onClick="@{()->viewmodel.onCheckRemember()}"
            android:text="@string/rememberuser"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:background="@drawable/btn_login_selector"
            android:onClick="@{()->viewmodel.onLogin()}"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_appversion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/app_version"
                android:textColor="@color/white"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/textView2"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</layout>

