<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewmodel"
            type="com.titan.cssl.projsearch.ProjSearchViewModel"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider_horizontal"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="关键词"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@={viewmodel.keyWord}"/>
        </LinearLayout>

        <TextView
            android:id="@+id/set_time_rd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/time_range"
            android:textColor="@color/black"
            android:textSize="16sp"/>


        <RelativeLayout
            android:id="@+id/set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/start_time"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/set_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="10dp"
                android:onClick="@{()->viewmodel.startTimeSet()}"
                android:text="@{viewmodel.startTime}"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/set_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_time"
                android:layout_margin="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/end_time"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/set_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/set_start_time"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="10dp"
                android:onClick="@{()->viewmodel.endTimeSet()}"
                android:text="@{viewmodel.endTime}"
                android:textColor="@color/black"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/set_type_rd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/project_type"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/set_project_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="10dp"
                android:gravity="end"
                android:onClick="@{()->viewmodel.projectTypeSet()}"
                android:text="@{viewmodel.projectType}"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/set_statu_rd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/approval_status"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/set_approval_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="10dp"
                android:gravity="end"
                android:onClick="@{()->viewmodel.approvalStatuSet()}"
                android:text="@{viewmodel.projectStatus}"
                android:textColor="@color/black"/>

        </LinearLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={viewmodel.isChecked}"
            android:padding="10dp"
            android:text="@string/location_search"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:onClick="@{()->viewmodel.locSearch()}"/>
    </LinearLayout>
</layout>
